fix: show completed status in step bar on mobile view

--- a/src/pages/plans/PlansPage.scss
+++ b/src/pages/plans/PlansPage.scss
@@ -83,6 +83,10 @@
       width: 50%;
       height: 100%;
       border-radius: 40px;
+
+      &--completed {
+        width: 100%;
+      }
     }
   }
 }
